--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -35,8 +35,13 @@
         "y = train[\"trips\"]\n",
         "\n",
         "# fit the model\n",
-        "model = ExponentialSmoothing(y, trend=\"add\", seasonal=\"add\", seasonal_periods=24)\n",
-        "modelFit = model.fit()\n",
+        "def model(train_df: pd.DataFrame):\n",
+        "    y = (\n",
+        "        train_df.sort_values(\"Timestamp\")\n",
+        "                .set_index(\"Timestamp\")[\"trips\"]\n",
+        "    )\n",
+        "    return ExponentialSmoothing(y, trend=\"add\", seasonal=\"add\", seasonal_periods=168)\n",
+        "\n",
         "\n",
         "# Forecast\n",
         "h = len(test)\n",
