--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
-        "outputId": "3640da79-7aed-427b-d5ec-bcd8fcf2f77b"
+        "outputId": "e25610c9-b799-43dd-e4ec-11bac688d915"
       },
       "outputs": [
         {
@@ -24,29 +24,56 @@
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
+        "# assignment1.py\n",
+        "# I chose the Exponential Smoothing (Holt-Winters) model.\n",
+        "\n",
+        "import os\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# Load data\n",
-        "train = pd.read_csv(\" https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\", parse_dates=[\"Timestamp\"])\n",
-        "test  = pd.read_csv(\"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\",  parse_dates=[\"Timestamp\"])\n",
-        "\n",
-        "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
-        "y = train[\"trips\"]\n",
-        "\n",
-        "# fit the model\n",
+        "# -----------------------------\n",
+        "# 1) Algorithm (callable): returns an UNFITTED model\n",
+        "# -----------------------------\n",
         "def model(train_df: pd.DataFrame):\n",
-        "    y = (\n",
+        "    \"\"\"\n",
+        "    Holt-Winters Exponential Smoothing with additive trend & seasonality.\n",
+        "    Expects columns ['Timestamp','trips'] in train_df (Timestamp is datetime-like).\n",
+        "    Returns an UNFITTED statsmodels model instance.\n",
+        "    \"\"\"\n",
+        "    y_ = (\n",
         "        train_df.sort_values(\"Timestamp\")\n",
         "                .set_index(\"Timestamp\")[\"trips\"]\n",
         "    )\n",
-        "    return ExponentialSmoothing(y, trend=\"add\", seasonal=\"add\", seasonal_periods=168)\n",
+        "    return ExponentialSmoothing(\n",
+        "        y_,\n",
+        "        trend=\"add\",\n",
+        "        seasonal=\"add\",\n",
+        "        seasonal_periods=168   # 24*7 weekly seasonality\n",
+        "    )\n",
+        "\n",
+        "# -----------------------------\n",
+        "# 2) Load local CSVs and fit the model\n",
+        "# -----------------------------\n",
+        "try:\n",
+        "    HERE = os.path.dirname(__file__)\n",
+        "except NameError:\n",
+        "    HERE = os.getcwd()  # fallback for Jupyter/Colab\n",
+        "\n",
+        "TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "\n",
+        "train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
+        "test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
         "\n",
         "\n",
-        "# Forecast\n",
+        "modelFit = model(train[[\"Timestamp\", \"trips\"]]).fit()\n",
+        "\n",
+        "# -----------------------------\n",
+        "# 3) Forecast the test horizon and expose `pred`\n",
+        "# -----------------------------\n",
         "h = len(test)\n",
-        "pred = modelFit.forecast(steps=h)\n",
-        "\n"
+        "_fc = modelFit.forecast(steps=h)\n",
+        "pred = pd.Series(_fc, index=pd.to_datetime(test[\"Timestamp\"]))\n"
       ]
     }
   ],
