--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
-        "outputId": "e25610c9-b799-43dd-e4ec-11bac688d915"
+        "outputId": "fc9d6d0f-e5c9-4aba-da1c-32f557695c45"
       },
       "outputs": [
         {
@@ -24,53 +24,44 @@
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py\n",
-        "# I chose the Exponential Smoothing (Holt-Winters) model.\n",
         "\n",
         "import os\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# -----------------------------\n",
-        "# 1) Algorithm (callable): returns an UNFITTED model\n",
-        "# -----------------------------\n",
-        "def model(train_df: pd.DataFrame):\n",
-        "    \"\"\"\n",
-        "    Holt-Winters Exponential Smoothing with additive trend & seasonality.\n",
-        "    Expects columns ['Timestamp','trips'] in train_df (Timestamp is datetime-like).\n",
-        "    Returns an UNFITTED statsmodels model instance.\n",
-        "    \"\"\"\n",
-        "    y_ = (\n",
-        "        train_df.sort_values(\"Timestamp\")\n",
-        "                .set_index(\"Timestamp\")[\"trips\"]\n",
-        "    )\n",
-        "    return ExponentialSmoothing(\n",
-        "        y_,\n",
-        "        trend=\"add\",\n",
-        "        seasonal=\"add\",\n",
-        "        seasonal_periods=168   # 24*7 weekly seasonality\n",
-        "    )\n",
         "\n",
-        "# -----------------------------\n",
-        "# 2) Load local CSVs and fit the model\n",
-        "# -----------------------------\n",
+        "# 1) Load data\n",
         "try:\n",
         "    HERE = os.path.dirname(__file__)\n",
         "except NameError:\n",
-        "    HERE = os.getcwd()  # fallback for Jupyter/Colab\n",
+        "    HERE = os.getcwd()  # Jupyter/Colab fallback\n",
         "\n",
-        "TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "TRAIN_PATH = os.path.join(HERE, \"assignment_data_train.csv\")\n",
+        "TEST_PATH  = os.path.join(HERE, \"assignment_data_test.csv\")\n",
         "\n",
-        "train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
-        "test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
+        "if os.path.exists(TRAIN_PATH) and os.path.exists(TEST_PATH):\n",
+        "    train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
+        "    test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
+        "else:\n",
+        "\n",
+        "    TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "    TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "    train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
+        "    test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
         "\n",
         "\n",
-        "modelFit = model(train[[\"Timestamp\", \"trips\"]]).fit()\n",
+        "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
+        "y = pd.to_numeric(train[\"trips\"], errors=\"coerce\")\n",
         "\n",
-        "# -----------------------------\n",
-        "# 3) Forecast the test horizon and expose `pred`\n",
-        "# -----------------------------\n",
+        "\n",
+        "# 2) Define algorithm object and fit\n",
+        "\n",
+        "\n",
+        "model = ExponentialSmoothing(y, trend=\"add\", seasonal=\"add\", seasonal_periods=24)\n",
+        "modelFit = model.fit(optimized=True)\n",
+        "\n",
+        "\n",
+        "# 3) Forecast\n",
         "h = len(test)\n",
         "_fc = modelFit.forecast(steps=h)\n",
         "pred = pd.Series(_fc, index=pd.to_datetime(test[\"Timestamp\"]))\n"
