--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,69 +2,88 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
-        "outputId": "fc9d6d0f-e5c9-4aba-da1c-32f557695c45"
+        "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency h will be used.\n",
-            "  self._init_dates(dates, freq)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "\n",
-        "import os\n",
+        "from __future__ import annotations\n",
+        "from pathlib import Path\n",
+        "import pickle\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
         "\n",
-        "# 1) Load data\n",
-        "try:\n",
-        "    HERE = os.path.dirname(__file__)\n",
-        "except NameError:\n",
-        "    HERE = os.getcwd()  # Jupyter/Colab fallback\n",
+        "def _prep_train_series(train_df: pd.DataFrame) -> pd.Series:\n",
         "\n",
-        "TRAIN_PATH = os.path.join(HERE, \"assignment_data_train.csv\")\n",
-        "TEST_PATH  = os.path.join(HERE, \"assignment_data_test.csv\")\n",
+        "    df = train_df.copy()\n",
+        "    df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"])\n",
+        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
         "\n",
-        "if os.path.exists(TRAIN_PATH) and os.path.exists(TEST_PATH):\n",
-        "    train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
-        "    test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
-        "else:\n",
+        "    y = pd.to_numeric(df[\"trips\"], errors=\"coerce\")\n",
+        "    # Force hourly frequency to keep Holt-Winters happy and reproducible\n",
+        "    y = y.asfreq(\"H\")\n",
         "\n",
-        "    TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "    TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
-        "    train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
-        "    test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
+        "    # Fill any occasional missing values to maintain a clean hourly series\n",
+        "    if y.isna().any():\n",
+        "        y = y.interpolate(limit_direction=\"both\")\n",
+        "\n",
+        "    return y\n",
         "\n",
         "\n",
-        "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
-        "y = pd.to_numeric(train[\"trips\"], errors=\"coerce\")\n",
+        "def _prep_test_index(test_df: pd.DataFrame) -> pd.DatetimeIndex:\n",
+        "\n",
+        "    idx = pd.to_datetime(test_df[\"Timestamp\"])\n",
+        "    try:\n",
+        "        # If timestamps are hourly, this preserves the hourly freq metadata\n",
+        "        idx = pd.DatetimeIndex(idx).asfreq(\"H\")\n",
+        "    except Exception:\n",
+        "        idx = pd.DatetimeIndex(idx)\n",
+        "    return idx\n",
         "\n",
         "\n",
-        "# 2) Define algorithm object and fit\n",
+        "def model1(train_df: pd.DataFrame):\n",
         "\n",
         "\n",
-        "model = ExponentialSmoothing(y, trend=\"add\", seasonal=\"add\", seasonal_periods=24)\n",
-        "modelFit = model.fit(optimized=True)\n",
+        "    y = _prep_train_series(train_df)\n",
+        "\n",
+        "    model = ExponentialSmoothing(\n",
+        "        y,\n",
+        "        trend=\"add\",\n",
+        "        seasonal=\"add\",\n",
+        "        seasonal_periods=24,              # daily seasonality for hourly data\n",
+        "        initialization_method=\"estimated\" # robust init across statsmodels versions\n",
+        "    )\n",
+        "\n",
+        "    fitted = model.fit(optimized=True)\n",
+        "    return fitted\n",
         "\n",
         "\n",
-        "# 3) Forecast\n",
-        "h = len(test)\n",
-        "_fc = modelFit.forecast(steps=h)\n",
-        "pred = pd.Series(_fc, index=pd.to_datetime(test[\"Timestamp\"]))\n"
+        "def predict(fitted_model, test_df: pd.DataFrame) -> pd.Series:\n",
+        "\n",
+        "    h = len(test_df)\n",
+        "    fc = fitted_model.forecast(steps=h)\n",
+        "    idx = _prep_test_index(test_df)\n",
+        "    return pd.Series(fc.values, index=idx, name=\"pred\")\n",
+        "\n",
+        "\n",
+        "def save_model(fitted_model, path: str | Path = \"model1.pkl\") -> Path:\n",
+        "\n",
+        "    p = Path(path)\n",
+        "    with p.open(\"wb\") as f:\n",
+        "        pickle.dump(fitted_model, f)\n",
+        "    return p\n",
+        "\n",
+        "\n",
+        "def load_model(path: str | Path = \"model1.pkl\"):\n",
+        "\n",
+        "    p = Path(path)\n",
+        "    with p.open(\"rb\") as f:\n",
+        "        return pickle.load(f)\n"
       ]
     }
   ],
