--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0"
@@ -11,21 +11,24 @@
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "from __future__ import annotations\n",
         "from pathlib import Path\n",
+        "from typing import Union\n",
         "import pickle\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
         "\n",
         "def _prep_train_series(train_df: pd.DataFrame) -> pd.Series:\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Prepare the training target as an hourly-frequency Series indexed by Timestamp.\n",
+        "    Ensures datetime index, sorting, numeric coercion, hourly freq, and fills rare gaps.\n",
+        "    \"\"\"\n",
         "    df = train_df.copy()\n",
         "    df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"])\n",
         "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
         "\n",
         "    y = pd.to_numeric(df[\"trips\"], errors=\"coerce\")\n",
-        "    # Force hourly frequency to keep Holt-Winters happy and reproducible\n",
+        "    # Force hourly frequency to keep Holt-Winters stable across environments\n",
         "    y = y.asfreq(\"H\")\n",
         "\n",
         "    # Fill any occasional missing values to maintain a clean hourly series\n",
@@ -36,10 +39,11 @@
         "\n",
         "\n",
         "def _prep_test_index(test_df: pd.DataFrame) -> pd.DatetimeIndex:\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Return a DatetimeIndex for test timestamps, preserving hourly freq when possible.\n",
+        "    \"\"\"\n",
         "    idx = pd.to_datetime(test_df[\"Timestamp\"])\n",
         "    try:\n",
-        "        # If timestamps are hourly, this preserves the hourly freq metadata\n",
         "        idx = pd.DatetimeIndex(idx).asfreq(\"H\")\n",
         "    except Exception:\n",
         "        idx = pd.DatetimeIndex(idx)\n",
@@ -47,40 +51,56 @@
         "\n",
         "\n",
         "def model1(train_df: pd.DataFrame):\n",
-        "\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Fit an Exponential Smoothing (Holt-Winters) model with additive trend and\n",
+        "    additive daily seasonality (24 hours). Returns a fitted statsmodels object.\n",
+        "    Assumes train_df has columns ['Timestamp', 'trips'].\n",
+        "    \"\"\"\n",
         "    y = _prep_train_series(train_df)\n",
         "\n",
-        "    model = ExponentialSmoothing(\n",
-        "        y,\n",
-        "        trend=\"add\",\n",
-        "        seasonal=\"add\",\n",
-        "        seasonal_periods=24,              # daily seasonality for hourly data\n",
-        "        initialization_method=\"estimated\" # robust init across statsmodels versions\n",
-        "    )\n",
+        "    # Build model with backward-compatible init (older statsmodels may not\n",
+        "    # support initialization_method). Also enable brute-force if available.\n",
+        "    try:\n",
+        "        model = ExponentialSmoothing(\n",
+        "            y, trend=\"add\", seasonal=\"add\", seasonal_periods=24,\n",
+        "            initialization_method=\"estimated\"\n",
+        "        )\n",
+        "        fitted = model.fit(optimized=True, use_brute=True)\n",
+        "    except TypeError:\n",
+        "        # Fallback for older statsmodels signatures\n",
+        "        model = ExponentialSmoothing(\n",
+        "            y, trend=\"add\", seasonal=\"add\", seasonal_periods=24\n",
+        "        )\n",
+        "        fitted = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "    fitted = model.fit(optimized=True)\n",
         "    return fitted\n",
         "\n",
         "\n",
         "def predict(fitted_model, test_df: pd.DataFrame) -> pd.Series:\n",
-        "\n",
+        "    \"\"\"\n",
+        "    Forecast len(test_df) steps ahead and return a pd.Series named 'pred'\n",
+        "    indexed by the test timestamps.\n",
+        "    \"\"\"\n",
         "    h = len(test_df)\n",
         "    fc = fitted_model.forecast(steps=h)\n",
         "    idx = _prep_test_index(test_df)\n",
         "    return pd.Series(fc.values, index=idx, name=\"pred\")\n",
         "\n",
         "\n",
-        "def save_model(fitted_model, path: str | Path = \"model1.pkl\") -> Path:\n",
-        "\n",
+        "def save_model(fitted_model, path: Union[str, Path] = \"model1.pkl\") -> Path:\n",
+        "    \"\"\"\n",
+        "    Persist a fitted model to disk using pickle.\n",
+        "    \"\"\"\n",
         "    p = Path(path)\n",
         "    with p.open(\"wb\") as f:\n",
         "        pickle.dump(fitted_model, f)\n",
         "    return p\n",
         "\n",
         "\n",
-        "def load_model(path: str | Path = \"model1.pkl\"):\n",
-        "\n",
+        "def load_model(path: Union[str, Path] = \"model1.pkl\"):\n",
+        "    \"\"\"\n",
+        "    Load a previously saved fitted model from disk.\n",
+        "    \"\"\"\n",
         "    p = Path(path)\n",
         "    with p.open(\"rb\") as f:\n",
         "        return pickle.load(f)\n"
