--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,108 +2,133 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
-        "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0"
+        "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5443e64c-aac8-4eed-8c80-6b4bdaced842"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-4049515063.py:53: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  y = pd.to_numeric(train[\"trips\"], errors=\"coerce\").asfreq(\"H\")\n"
+          ]
+        }
+      ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
+        "# =========================\n",
+        "# file: model1.py\n",
+        "# =========================\n",
+        "# This script:\n",
+        "# 1) Loads the training and test data (local files if present; otherwise, URLs).\n",
+        "# 2) Builds a Holt-Winters Exponential Smoothing model (\"model\") — NOT fitted.\n",
+        "# 3) Fits the model -> \"modelFit\".\n",
+        "# 4) Produces \"pred\": a 1-D list of float predictions of length equal to test rows (744).\n",
+        "#\n",
+        "# Variables exposed for the autograder:\n",
+        "#   - model      : statsmodels.tsa.holtwinters.ExponentialSmoothing\n",
+        "#   - modelFit   : statsmodels.tsa.holtwinters.results.HoltWintersResults\n",
+        "#                  (or wrapper depending on statsmodels version)\n",
+        "#   - pred       : list[float] of length 744\n",
+        "#\n",
+        "# Notes:\n",
+        "#   * We set an explicit hourly frequency ('H') and fill rare gaps by interpolation.\n",
+        "#   * We try both daily (24) and weekly (168) seasonality and keep the better (by AIC).\n",
+        "#   * We keep everything numeric (float) and return a plain 1-D Python list for `pred`.\n",
+        "\n",
+        "import os\n",
         "from pathlib import Path\n",
-        "from typing import Union\n",
-        "import pickle\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
+        "# ---------- 1) Load data ----------\n",
+        "try:\n",
+        "    HERE = os.path.dirname(__file__)\n",
+        "except NameError:\n",
+        "    HERE = os.getcwd()\n",
         "\n",
-        "def _prep_train_series(train_df: pd.DataFrame) -> pd.Series:\n",
-        "    \"\"\"\n",
-        "    Prepare the training target as an hourly-frequency Series indexed by Timestamp.\n",
-        "    Ensures datetime index, sorting, numeric coercion, hourly freq, and fills rare gaps.\n",
-        "    \"\"\"\n",
-        "    df = train_df.copy()\n",
-        "    df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"])\n",
-        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
+        "TRAIN_PATH = os.path.join(HERE, \"assignment_data_train.csv\")\n",
+        "TEST_PATH  = os.path.join(HERE, \"assignment_data_test.csv\")\n",
         "\n",
-        "    y = pd.to_numeric(df[\"trips\"], errors=\"coerce\")\n",
-        "    # Force hourly frequency to keep Holt-Winters stable across environments\n",
-        "    y = y.asfreq(\"H\")\n",
+        "if os.path.exists(TRAIN_PATH) and os.path.exists(TEST_PATH):\n",
+        "    train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
+        "    test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
+        "else:\n",
+        "    TRAIN_URL = (\"https://raw.githubusercontent.com/dustywhite7/\"\n",
+        "                 \"econ8310-assignment1/main/assignment_data_train.csv\")\n",
+        "    TEST_URL  = (\"https://raw.githubusercontent.com/dustywhite7/\"\n",
+        "                 \"econ8310-assignment1/main/assignment_data_test.csv\")\n",
+        "    train = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
+        "    test  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "    # Fill any occasional missing values to maintain a clean hourly series\n",
-        "    if y.isna().any():\n",
-        "        y = y.interpolate(limit_direction=\"both\")\n",
+        "# Sort and index\n",
+        "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
         "\n",
-        "    return y\n",
+        "# Target series with explicit hourly frequency\n",
+        "y = pd.to_numeric(train[\"trips\"], errors=\"coerce\").asfreq(\"H\")\n",
+        "if y.isna().any():\n",
+        "    # Fill any small gaps to keep a clean hourly series\n",
+        "    y = y.interpolate(limit_direction=\"both\")\n",
         "\n",
-        "\n",
-        "def _prep_test_index(test_df: pd.DataFrame) -> pd.DatetimeIndex:\n",
-        "    \"\"\"\n",
-        "    Return a DatetimeIndex for test timestamps, preserving hourly freq when possible.\n",
-        "    \"\"\"\n",
-        "    idx = pd.to_datetime(test_df[\"Timestamp\"])\n",
+        "# ---------- 2) Build the algorithm object (UNFITTED) ----------\n",
+        "def _build(y_series, sp):\n",
+        "    # Using additive trend + additive seasonality; damped trend helps stability.\n",
+        "    # initialization_method=\"estimated\" when available (older versions ignore it).\n",
         "    try:\n",
-        "        idx = pd.DatetimeIndex(idx).asfreq(\"H\")\n",
-        "    except Exception:\n",
-        "        idx = pd.DatetimeIndex(idx)\n",
-        "    return idx\n",
-        "\n",
-        "\n",
-        "def model1(train_df: pd.DataFrame):\n",
-        "    \"\"\"\n",
-        "    Fit an Exponential Smoothing (Holt-Winters) model with additive trend and\n",
-        "    additive daily seasonality (24 hours). Returns a fitted statsmodels object.\n",
-        "    Assumes train_df has columns ['Timestamp', 'trips'].\n",
-        "    \"\"\"\n",
-        "    y = _prep_train_series(train_df)\n",
-        "\n",
-        "    # Build model with backward-compatible init (older statsmodels may not\n",
-        "    # support initialization_method). Also enable brute-force if available.\n",
-        "    try:\n",
-        "        model = ExponentialSmoothing(\n",
-        "            y, trend=\"add\", seasonal=\"add\", seasonal_periods=24,\n",
-        "            initialization_method=\"estimated\"\n",
+        "        m = ExponentialSmoothing(\n",
+        "            y_series,\n",
+        "            trend=\"add\",\n",
+        "            damped_trend=True,\n",
+        "            seasonal=\"add\",\n",
+        "            seasonal_periods=sp,\n",
+        "            initialization_method=\"estimated\",\n",
         "        )\n",
-        "        fitted = model.fit(optimized=True, use_brute=True)\n",
         "    except TypeError:\n",
-        "        # Fallback for older statsmodels signatures\n",
-        "        model = ExponentialSmoothing(\n",
-        "            y, trend=\"add\", seasonal=\"add\", seasonal_periods=24\n",
+        "        # Backward-compatibility for older statsmodels signatures\n",
+        "        m = ExponentialSmoothing(\n",
+        "            y_series,\n",
+        "            trend=\"add\",\n",
+        "            damped_trend=True,\n",
+        "            seasonal=\"add\",\n",
+        "            seasonal_periods=sp,\n",
         "        )\n",
-        "        fitted = model.fit(optimized=True, use_brute=True)\n",
+        "    return m\n",
         "\n",
-        "    return fitted\n",
+        "# Try daily and weekly seasonality; pick the lower AIC\n",
+        "candidates = [24, 168]\n",
+        "_best = None\n",
+        "model = None  # will be set below\n",
         "\n",
+        "for sp in candidates:\n",
+        "    m = _build(y, sp)\n",
+        "    try:\n",
+        "        fit_tmp = m.fit(optimized=True, use_brute=True)\n",
+        "    except TypeError:\n",
+        "        fit_tmp = m.fit(optimized=True)\n",
+        "    aic = getattr(fit_tmp, \"aic\", np.inf)\n",
+        "    if (_best is None) or (aic < _best[0]):\n",
+        "        _best = (aic, sp, m, fit_tmp)\n",
         "\n",
-        "def predict(fitted_model, test_df: pd.DataFrame) -> pd.Series:\n",
-        "    \"\"\"\n",
-        "    Forecast len(test_df) steps ahead and return a pd.Series named 'pred'\n",
-        "    indexed by the test timestamps.\n",
-        "    \"\"\"\n",
-        "    h = len(test_df)\n",
-        "    fc = fitted_model.forecast(steps=h)\n",
-        "    idx = _prep_test_index(test_df)\n",
-        "    return pd.Series(fc.values, index=idx, name=\"pred\")\n",
+        "# Keep the chosen algorithm object as `model` (UNFITTED) and also the fitted version\n",
+        "# so that the autograder can verify both types separately.\n",
+        "_, _SP, model, modelFit = _best\n",
         "\n",
+        "# ---------- 3) Forecast ----------\n",
+        "h = len(test)\n",
+        "_fc = modelFit.forecast(steps=h)\n",
         "\n",
-        "def save_model(fitted_model, path: Union[str, Path] = \"model1.pkl\") -> Path:\n",
-        "    \"\"\"\n",
-        "    Persist a fitted model to disk using pickle.\n",
-        "    \"\"\"\n",
-        "    p = Path(path)\n",
-        "    with p.open(\"wb\") as f:\n",
-        "        pickle.dump(fitted_model, f)\n",
-        "    return p\n",
-        "\n",
-        "\n",
-        "def load_model(path: Union[str, Path] = \"model1.pkl\"):\n",
-        "    \"\"\"\n",
-        "    Load a previously saved fitted model from disk.\n",
-        "    \"\"\"\n",
-        "    p = Path(path)\n",
-        "    with p.open(\"rb\") as f:\n",
-        "        return pickle.load(f)\n"
+        "# The grader expects a 1-D list/array of numeric values, length 744 (Jan has 31*24).\n",
+        "# Use float so it can handle any missing-number logic cleanly.\n",
+        "pred = np.asarray(_fc, dtype=float).ravel().tolist()\n"
       ]
     }
   ],
